Wolfpack 12.9.14 Beta (SVN)
 * Core Changes:
  - Fixed onDeath being called after the npc was already deleted.
 * Definition Changes:
  - Bench (0x1049) which was crafted was "unusable"
  - fixed bug #0000381 ("potion_keg" and "potionkeg")
 * Python Script Changes:
  - Added a follow command.
  - Tinkers can now choose a second material.
  - Swingspeed is now limited to 1 swing per second.
  - Implemented several item property caps.
  - Archers now only need to stand still for 500 ms before they can fire.
  - Parried special abilities don't consume mana anymore.
  - Using a special ability 3 seconds after the last special ability consumes twice
    the mana.
  - Fixed an issue with the spell Telekinesis
  - Fix for Detecting Hidden
  - fixed bug #0000380 (potionkeg was not usable with nightsight potion)
 * Misc. Changes:
 * Known Issues, Bugs, and Missing Features:
  - Some skills are still incomplete.
  - Spawn regions are incomplete.
    We welcome donated OSI-like spawn scripts!
  - Town/World regions are incomplete.
    We welcome donated OSI-like region scripts!
  - Possible that a few monsters are missing and/or incomplete.
  - Multis (Houses/Boats) are not currently supported.

Wolfpack 12.9.13 Beta (25. December 2004)
 * Core Changes:
  - Fixed meditation skillcheck in mana regeneration code.
  - Changed GM talk color.
  - Implemented the onCheckVictim event.
  - Implemented the onDoDamage event.
  - Stablemasters now remove the stabled pets from the follower list.
  - Corpses now decay in multis too.
  - Implemented a walktest command for testing walking.
  - Fixed several other walking bugs.
  - Implemented onRemoteUse for checking if an object that is in the belonging
    of another char may be used. First called for the using char, then for the
    owner of the object.
  - Implemented onSnooping that is called for the owner and for the player trying to
    open a container.
  - Fixed shop restock.